examples/type_system/failing/108_fun_return_string_vs_int.flx
fn bad() -> Int {
    "oops"
}

fn main() -> Unit {
    bad()
}
